@@ -293,6 +293,12 @@ name|useOrigin
 init|=
 literal|false
 decl_stmt|;
+specifier|private
+name|Boolean
+name|keep
+init|=
+literal|null
+decl_stmt|;
 specifier|public
 name|boolean
 name|isUseOrigin
@@ -1382,6 +1388,14 @@ name|isValidate
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|resolve
+operator|.
+name|setKeep
+argument_list|(
+name|isKeep
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return
 name|resolve
 return|;
@@ -1720,6 +1734,50 @@ parameter_list|()
 block|{
 return|return
 name|_file
+return|;
+block|}
+specifier|public
+name|void
+name|setKeep
+parameter_list|(
+name|boolean
+name|keep
+parameter_list|)
+block|{
+name|this
+operator|.
+name|keep
+operator|=
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|keep
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isKeep
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|keep
+operator|==
+literal|null
+condition|?
+operator|!
+name|isInline
+argument_list|()
+else|:
+name|this
+operator|.
+name|keep
+operator|.
+name|booleanValue
+argument_list|()
 return|;
 block|}
 block|}
