@@ -848,6 +848,364 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testWithoutKeep
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IvyResolve
+name|resolve
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|resolve
+operator|.
+name|setProject
+argument_list|(
+name|_project
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setCache
+argument_list|(
+name|_cache
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-multiconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setConf
+argument_list|(
+literal|"compile"
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|ResolveReport
+name|reportBefore
+init|=
+operator|(
+name|ResolveReport
+operator|)
+name|_project
+operator|.
+name|getReference
+argument_list|(
+literal|"ivy.resolved.report"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.1"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setConf
+argument_list|(
+literal|"*"
+argument_list|)
+expr_stmt|;
+comment|// will trigger a resolve
+name|_task
+operator|.
+name|setKeep
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// don't keep the resolve results
+name|_task
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|ResolveReport
+name|reportAfter
+init|=
+operator|(
+name|ResolveReport
+operator|)
+name|_project
+operator|.
+name|getReference
+argument_list|(
+literal|"ivy.resolved.report"
+argument_list|)
+decl_stmt|;
+name|assertSame
+argument_list|(
+literal|"IvyPostResolveTask has kept the resolve report where it should have"
+argument_list|,
+name|reportBefore
+argument_list|,
+name|reportAfter
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testInlineWithoutKeep
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|_task
+operator|.
+name|setOrganisation
+argument_list|(
+literal|"org1"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setModule
+argument_list|(
+literal|"mod1.1"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setRevision
+argument_list|(
+literal|"2.0"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setInline
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setConf
+argument_list|(
+literal|"*"
+argument_list|)
+expr_stmt|;
+comment|// will trigger a resolve
+name|_task
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|ResolveReport
+name|reportAfter
+init|=
+operator|(
+name|ResolveReport
+operator|)
+name|_project
+operator|.
+name|getReference
+argument_list|(
+literal|"ivy.resolved.report"
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+literal|"IvyPostResolveTask has kept the resolve report where it should have"
+argument_list|,
+name|reportAfter
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testInlineWithKeep
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|_task
+operator|.
+name|setOrganisation
+argument_list|(
+literal|"org1"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setModule
+argument_list|(
+literal|"mod1.1"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setRevision
+argument_list|(
+literal|"2.0"
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setInline
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setKeep
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|_task
+operator|.
+name|setConf
+argument_list|(
+literal|"*"
+argument_list|)
+expr_stmt|;
+comment|// will trigger a resolve
+name|_task
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|ResolveReport
+name|reportAfter
+init|=
+operator|(
+name|ResolveReport
+operator|)
+name|_project
+operator|.
+name|getReference
+argument_list|(
+literal|"ivy.resolved.report"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"IvyPostResolveTask has kept the resolve report where it should have"
+argument_list|,
+name|reportAfter
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testWithResolveIdAndPreviousResolveInSameBuildAndLessConfs
 parameter_list|()
 throws|throws
